--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
-<body class="bg-still">
+<body class="bg-still join">
 
     <header class="header">
         <div class="top-head d-xl-flex align-items-center">
@@ -91,14 +91,14 @@
             </div>
             <div class="try-for-free">
                 <div class="row g-0 align-items-center">
-                    <div class="col-xl-8 col-12">
+                    <div class="col-sm-8 col-12">
                         <div class="try-free-title">
                             <h3>Ücretsiz Başlayın!</h3>
                             <p>Ek özellikler, raporlama ve daha fazlası için size uygun paketi seçebilirsiniz.</p>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-12">
-                        <div class="try-free text-xl-end text-start">
+                    <div class="col-sm-4 col-12">
+                        <div class="try-free text-sm-end text-start">
                             <a href="#" class="btn-try-free">Ücretsiz Dene</a>
                         </div>
                     </div>
