--- a/meeting-records2.html
+++ b/meeting-records2.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
     	
 </head>
-<body>
+<body class="bg-none">
 
     <div class="d-xl-flex content-flex">
         <header class="header">
@@ -21,16 +21,22 @@
                 <div class="main-logo">
                     <a href="#"><img src="img/vimesoft-logo.svg" alt=""></a>
                 </div>
+                <div class="mobile-menu-burger">
+                    <img src="img/menu-icon2.png" alt="">
+                </div>
                 <nav class="sticky-menu">
+                    <div class="main-logo m-0 ms-3 mb-5 p-0">
+                        <a href="#"><img src="img/vimesoft-logo.svg" alt=""></a>
+                    </div>
+                    <div class="mobile-menu-burger">
+                        <img src="img/mobile-close.png" alt="">
+                    </div>
                     <div class="sticky-first-div">
                         <div class="d-flex align-items-center">
                             <div class="sticky-profil">
                                 <img src="img/profil-pic.png" alt="">
                             </div>
                             <span class="sticky-user-name">Onur Tan</span>
-                        </div>
-                        <div class="mobile-menu-burger">
-                            <img src="img/menu-icon2.png" alt="">
                         </div>
                     </div>
                     <ul class="sticky-nav">
