--- a/settings.html
+++ b/settings.html
@@ -21,16 +21,22 @@
                 <div class="main-logo">
                     <a href="#"><img src="img/vimesoft-logo.svg" alt=""></a>
                 </div>
+                <div class="mobile-menu-burger">
+                    <img src="img/menu-icon2.png" alt="">
+                </div>
                 <nav class="sticky-menu">
+                    <div class="main-logo m-0 ms-3 mb-5 p-0">
+                        <a href="#"><img src="img/vimesoft-logo.svg" alt=""></a>
+                    </div>
+                    <div class="mobile-menu-burger">
+                        <img src="img/mobile-close.png" alt="">
+                    </div>
                     <div class="sticky-first-div">
                         <div class="d-flex align-items-center">
                             <div class="sticky-profil">
                                 <img src="img/profil-pic.png" alt="">
                             </div>
                             <span class="sticky-user-name">Onur Tan</span>
-                        </div>
-                        <div class="mobile-menu-burger">
-                            <img src="img/menu-icon2.png" alt="">
                         </div>
                     </div>
                     <ul class="sticky-nav">
@@ -547,10 +553,11 @@
                     <div class="detail-pop-item"><span>18</span>/<span>20</span></div>
                     <div class="detail-pop-item">
                         <div class="detail-load">
-                            <div class="detail-loading" style="width: 80%;"></div>
-                        </div>
-                        <div class="detail-load-text">
-                            80%
+                            <div class="detail-loading" style="width: 80%;">
+                                <div class="detail-load-text">
+                                    80%
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -559,10 +566,11 @@
                     <div class="detail-pop-item"><span>16</span>/<span>18</span></div>
                     <div class="detail-pop-item">
                         <div class="detail-load">
-                            <div class="detail-loading" style="width: 87%;"></div>
-                        </div>
-                        <div class="detail-load-text">
-                            87%
+                            <div class="detail-loading" style="width: 87%;">
+                                <div class="detail-load-text">
+                                    87%
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -571,10 +579,11 @@
                     <div class="detail-pop-item"><span>9</span>/<span>18</span></div>
                     <div class="detail-pop-item">
                         <div class="detail-load">
-                            <div class="detail-loading" style="width: 50%;"></div>
-                        </div>
-                        <div class="detail-load-text">
-                            50%
+                            <div class="detail-loading" style="width: 50%;">
+                                <div class="detail-load-text">
+                                    50%
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -583,10 +592,11 @@
                     <div class="detail-pop-item"><span>348dk.</span>/<span>823dk.</span></div>
                     <div class="detail-pop-item">
                         <div class="detail-load">
-                            <div class="detail-loading" style="width: 43%;"></div>
-                        </div>
-                        <div class="detail-load-text">
-                            43%
+                            <div class="detail-loading" style="width: 43%;">
+                                <div class="detail-load-text">
+                                    43%
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
