--- a/meeting-plan-join.html
+++ b/meeting-plan-join.html
@@ -170,7 +170,7 @@
             </div>
         </header>
 
-        <main class="main">
+        <main class="main mtpj">
             <div class="meeting-plans-wrapper tabs pb-5">
                 <div class="user-panel-title">
                     <h1>Selam, <span>Onur.</span></h1>
