--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                                         </div>
                                     </div>
                                     <div class="contact-input-box">
-                                        <input type="email" class="form-input"  id="email" name="email" autocomplete="off" required="required"/>
+                                        <input type="email" class="form-input"  id="email" name="email" autocomplete="off" placeholder="+90" required="required"/>
                                         <label for="email">E-posta Adresiniz</label>
                                         <span class="contact-blue"></span>
                                     </div>
@@ -119,9 +119,15 @@
                                         <label for="msg">Mesajınız</label>
                                         <span class="contact-blue"></span>
                                     </div>
-                                    <div class="contact-check-box d-flex">
+                                    <div class="contact-check-box d-flex tpx-cc">
                                         <input type="checkbox" class="checkbox" id="condition" name="condition" value="condition"/>
                                         <label for="condition">Katılım Koşulları'nı Onaylıyorum.</label>
+                                        <div class="tooltipx">
+                                            <div class="tooltipx-text">
+                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                <span class="tx-span"></span>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="contact-check-box d-flex">
                                         <input type="checkbox" class="checkbox" id="informed" name="informed" value="informed"/>
