--- a/meeting-report2.html
+++ b/meeting-report2.html
@@ -179,8 +179,8 @@
                 <div class="contact-box2 mtr">
                     <div class="my-meeting-toptitle align-items-center">
                         <div class="my-meeting-head-left">
-                            <a href="#t_rapor" class="btn-buy2 active">Toplantı Raporu</a>
-                            <span  class="btn-buy2">Kişisel Rapor</span>
+                            <a href="#t_rapor" class="btn-buy2 mb-md-0 mb-2 active">Toplantı Raporu</a>
+                            <span  class="btn-buy2 mb-md-0 mb-2">Kişisel Rapor</span>
                             <a href="#istatistik" class="btn-buy2">İstatistikler</a>
                         </div>
                         <div class="my-meeting-head-right">
