--- a/meeting-plan-join.html
+++ b/meeting-plan-join.html
@@ -290,12 +290,12 @@
                         <h1>Görüşmeye Başla!</h1>
                     </div>
                     <div class="mb-md-5 mb-4">
-                        <a href="#" class="btn-buy-xl2 me-xl-4 me-0 meeting-btn new-form-input">Toplantı Planla</a>
-                        <a href="#" class="btn-buy-xl me-xl-4 me-0 meeting-btn new-form-input">Toplantıya Başla</a>
+                        <a href="#" class="btn-buy-xl2 me-xl-4 mb-xl-3 me-0 meeting-btn new-form-input">Toplantı Planla</a>
+                        <a href="#" class="btn-buy-xl me-xl-4 mb-xl-3 me-0 meeting-btn new-form-input">Toplantıya Başla</a>
                         <a href="#" class="btn-buy-xl meeting-btn new-form-input">Toplantıya Katıl</a>
                     </div>
                     <div class="meeting-adress pb-5">
-                        Kişisel Toplantı Adresim: <a href="#">http://vimesoft.com//285205328</a> <span class="ps-2 copy-link"><img src="img/icon7.svg"></span>
+                        Kişisel Toplantı Adresim: <a href="http://vimesoft.com//285205328">Link</a> <span class="ps-2 copy-link"><img src="img/icon7.svg"></span>
                     </div>
                 </div>
             </div>
