--- a/create-account.html
+++ b/create-account.html
@@ -125,7 +125,19 @@
                                 </div>
                                 <div class="contact-check-box ">
                                     <div class="extra-note pb-4">
-                                        Aşağıdaki devam et butonuna tıkladığınızda <a href="#" class="delete p-0">Gizlilik Bildirimini</a> ve <a href="#" class="delete p-0">Hizmet Şartlarını</a> kabul etmiş olursunuz.
+                                        Aşağıdaki devam et butonuna tıkladığınızda <span class="delete p-0 p-relative tpx-cc">Gizlilik Bildirimini <div class="tooltipx">
+                                            <div class="tooltipx-text">
+                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                <span class="tx-span"></span>
+                                            </div>
+                                        </div></span> ve <span class="delete p-0 p-relative tpx-cc">Hizmet Şartlarını
+                                            <div class="tooltipx">
+                                                <div class="tooltipx-text">
+                                                    Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
+                                                    <span class="tx-span"></span>
+                                                </div>
+                                            </div>
+                                        </span> kabul etmiş olursunuz.
                                     </div>
                                     <div class="create-btns">
                                         <a href="#" class="btn-cancel me-md-4 me-3">İptal</a>
