--- a/error-payment.html
+++ b/error-payment.html
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-12">
-                            <div class="create-btns text-md-end text-start">
+                            <div class="create-btns text-md-end text-center mt-xl-0 mt-3">
                                 <a href="#" class="btn-send">Geri Dön</a>
                             </div>
                         </div>
